test: Added DegreeProgram to Student object prototypes